# Celestia

./: Cargo.toml  LICENSE  README.md  backendAPI.js  background.js  blockchain.js  certificateRoutes.js  certificateService.js  content.js  index.html  index.js  manifest.json  package-lock.json  popup.html  popup.js  prism.css  prism.js  process.env  server.js  styles.css  truffle-config.js
contracts/: CertificateTransparency.sol
migrations/: 1_CertificateTransparency_migrations.js  1_deploy_contracts.js
pkg/: certificate_transparency_extension.d.ts  certificate_transparency_extension.js  certificate_transparency_extension_bg.wasm  certificate_transparency_extension_bg.wasm.d.ts  package.json
src/: api_celestia.rs  api_server.rs  lib.rs
